--- a/Security.csproj
+++ b/Security.csproj
@@ -45,4 +45,8 @@
     </None>
   </ItemGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="SHA3.Net" Version="1.3.0" />
+	</ItemGroup>
+
 </Project>
