Change Solution & Project Name To KhayyamApps.Security

--- a/SecurityTest/SecurityTest.csproj
+++ b/SecurityTest/SecurityTest.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Security.csproj" />
+    <ProjectReference Include="..\KhayyamApps.Security.csproj" />
   </ItemGroup>
 
 </Project>
