Change Solution & Project Name To KhayyamApps.Windows

--- a/KhayyamApps.Windows.csproj
+++ b/KhayyamApps.Windows.csproj
@@ -6,6 +6,7 @@
     <AssemblyVersion>$(Version)</AssemblyVersion>
     <FileVersion>$(Version)</FileVersion>
 		<UseWPF>true</UseWPF>
+		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
 
 </Project>
