--- a/KhayyamApps.Windows.csproj
+++ b/KhayyamApps.Windows.csproj
@@ -10,7 +10,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NLog" Version="5.0.0" />
+    <PackageReference Include="NLog" Version="5.0.1" />
+    <PackageReference Include="Serilog" Version="2.11.0" />
   </ItemGroup>
 
 </Project>
